test: add generator boundry test